# Bootcamp-Python-Jornada-de-Dados

./: README.md  pyproject.toml
Arquivos/: README.md
Aula-00/: Readme.md  atividade.py  desafio.py
Aula-Indroducao/: type-hint.py
Estrutura-Dados/: README.md
Funcoes/: README.md  atividade.py  desafio.py  teste-dois.py  teste.py
