[tool.poetry]
name = "bootcamp-python-jornada-de-dados"
version = "0.1.0"
description = ""
authors = ["AntonioFreire203 <freireantonio203@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
